Fix text overflow

--- a/src/components/ShopComponents/ShopItem/ShopItem.module.css
+++ b/src/components/ShopComponents/ShopItem/ShopItem.module.css
@@ -6,6 +6,8 @@
   border: 1px solid;
   border-radius: 15px;
   padding: 40px;
+
+  max-height: 400px;
 }
 
 .shopItem > img {
@@ -15,16 +17,25 @@
   border-radius: 8px;
 }
 
+.shopItemInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  gap: 30px;
+}
+
 .shopItemTitle {
   font-weight: bold;
   text-align: left;
 
   max-width: 200px;
-  height: 100px;
+  max-height: 80px;
+
+  font-size: 0.9em;
 }
 
 .shopItemPrice {
-  margin-top: -20px;
   margin-bottom: 20px;
 }
 
